--- a/css/main.css
+++ b/css/main.css
@@ -326,7 +326,7 @@ a,a:hover, .overlay, img, .form-control,  .form-control:hover, button{
     padding: 10px 0;
 }
 .navbar-fixed-top.header-section{
-    background-color: #56a2ff;
+    background-color: #000000;
     box-shadow: 0px 16px 28px 0px rgba(0, 0, 0, 0.05);
     height: 70px;
     border-bottom: 0;
@@ -487,8 +487,11 @@ ul.nav > li > a.active{
     position: relative;
     z-index: 1;
 }
+.navbar-brand{
+    height: 50px;
+}
 .hero-section:before{
-    background: linear-gradient(-46deg, #2313b8 0%, #56a2ff 50%, #0bbf6c 100%);
+    background: linear-gradient(-46deg, #fffc00 20%, #000000 100%);
     content: "";
     width: 100%;
     height: 100%;
@@ -527,7 +530,7 @@ ul.nav > li > a.active{
     position: relative;
 }
 .hero-moc{
-    background-image: url(../img/hero-mockup.png);
+    background-image: url(../img/screen.png);
     background-position: bottom right;
     background-repeat: no-repeat;
     content: "";
@@ -732,7 +735,7 @@ ul.nav > li > a.active{
     transition: all 0.2s ease-in-out;
 }
 .feature-content i{
-    background-image: linear-gradient(-45deg, #2b18dd 0%, #56a2ff 50%, #51eca5 100%);
+    background-image: linear-gradient(-45deg, #fffc00 0%, #799f0c 50%, #000000 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 700;
