--- a/css/main.css
+++ b/css/main.css
@@ -1266,17 +1266,16 @@ ul.nav > li > a.active{
 .subscribe-form .submit{
     position: absolute;
     right: 5px;
-    top: 0;
     height: 60px;
     width: 100px;
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 600;
-    color: #56a2ff;
+    color: yellow;
 }
 .subscribe-form .submit:hover{
     cursor: pointer;
-    color: #0bbf6c;
+    color: black;
 }
 #subscribe-result{
     display: none;
