--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,3 @@
-/*
-   Olio Theme Responsive Design
-*/
-
 @media (max-width: 1170px) {
     .swiper-container{
         width: 70%;
@@ -135,13 +131,18 @@
 /* ---- Start of max-width 520px CSS ---- */
 @media all and (max-width: 520px) {
     h1{
-        font-size: 20px!important;
-        margin: 0 0 15px;
+        font-size: 40px!important;
+        margin-top: 100px;
     }
     .hero-section{
         height: 460px;
     }
-    .hero-content p{ font-size: 16px; }
+    .hero-content p{
+        font-size: 16px;
+    }
+    .hero-content h3{
+        margin-top: 10px;
+    }
     .subscribe-form{ width: 100%; }
     .button-group a:first-child{
         margin-bottom: 10px;
