--- a/css/main.css
+++ b/css/main.css
@@ -504,6 +504,7 @@ ul.nav > li > a.active{
     .hero-moc, .vanish{
         display: none;
     }
+    .
 }
 .hero-moc{
     background-image: url(../img/screen.png);
