--- a/css/responsive.css
+++ b/css/responsive.css
@@ -132,13 +132,16 @@
 @media all and (max-width: 520px) {
     h1{
         font-size: 40px!important;
-        margin-top: 100px;
+        margin-top: 60px!important;
     }
     .hero-section{
-        height: 460px;
+        height: 100vh;
     }
     .hero-content p{
         font-size: 16px;
+    }
+    .hero-section:after {
+        background-image: none;
     }
     .hero-content h3{
         margin-top: 10px;
