--- a/css/careers.css
+++ b/css/careers.css
@@ -87,17 +87,17 @@ textarea::-webkit-input-placeholder{
 
 input:-moz-placeholder,
 textarea:-moz-placeholder{ /* Firefox 18- */
-   color: #f5f5f5 !important;
+   color: #f5f5f5 !important;  
 }
 
 input::-moz-placeholder,
 textarea::-moz-placeholder{  /* Firefox 19+ */
-   color: #f5f5f5 !important;
+   color: #f5f5f5 !important;  
 }
 
 input:-ms-input-placeholder,
-textarea:-ms-input-placeholder{
-   color: #f5f5f5 !important;
+textarea:-ms-input-placeholder{  
+   color: #f5f5f5 !important;  
 }
 button{
     border: none;
@@ -410,7 +410,7 @@ ul.nav > li > a.active{
     margin: 17px 5px 21px;
 }
 .slicknav_nav .slicknav_row:hover,
-.slicknav_nav .slicknav_row,
+.slicknav_nav .slicknav_row, 
 .slicknav_nav a,
 .slicknav_nav a:hover{
     -moz-border-radius: 0;
@@ -418,7 +418,7 @@ ul.nav > li > a.active{
     -o-border-radius: 0;
     border-radius: 0;
 }
-.slicknav_nav .slicknav_row,
+.slicknav_nav .slicknav_row, 
 .slicknav_nav a {
     padding: 10px 15px;
     margin: 0;
@@ -450,7 +450,7 @@ ul.nav > li > a.active{
    Hero Section
    ========================================================================== */
 .hero-section{
-    background-image: url(../img/hero.jpg);
+    background-image: url(../img/career.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -780,7 +780,7 @@ ul.nav > li > a.active{
     -webkit-transition: all .3s ease;
     transition: all .3s ease
 }
-.swiper-container .swiper-slide-next,
+.swiper-container .swiper-slide-next, 
 .swiper-container .swiper-slide-prev{
     transform: scale(.75);
     opacity: 0.85;
@@ -935,7 +935,7 @@ ul.nav > li > a.active{
     text-transform: uppercase;
     display: block;
     margin-bottom: 5px;
-
+    
 }
 .team-content span{
     font-size: 12px;
@@ -1317,7 +1317,7 @@ a:hover {
     color: #bbb;
     font-size: 14px;
     margin: 0;
-}
+}  
 
 /* ==========================================================================
    Scroll To Top
